gestion des tours, implementation de la classe Humain, transformation de la classe joueur en classe abstraite, grosse modification de la methode jouer de la classe jeu