@@ -6,11 +6,11 @@ public class Pioche {
     private List<Pokemon> m_pioche;
 
     public Pioche(Jeu jeu, int taillPioche) {
-        m_pioche = new ArrayList<>();
+        this.m_pioche = new ArrayList<>();
         for (int i = 0; i < taillPioche; i++) {
             // prendre un pokemon aléatoire dans la liste des noms de pokemons
             String nomPokemon = jeu.getListNomPokemon().get((int) (Math.random() * jeu.getListNomPokemon().size()));
-            m_pioche.add(new Pokemon(nomPokemon, jeu));
+            this.m_pioche.add(new Pokemon(nomPokemon, jeu));
             // supprimer le pokemon de la liste des noms de pokemons
             jeu.getListNomPokemon().remove(nomPokemon);
         }
@@ -19,11 +19,15 @@ public class Pioche {
 
     public void piocherMain(Main mMain) {
         // si la pioche n'est pas vide
-        if (!m_pioche.isEmpty()) {
+        if (!this.m_pioche.isEmpty()) {
             // ajouter le premier pokemon de la pioche à la main
-            mMain.ajouterPokemon(m_pioche.get(0));
+            mMain.ajouterPokemon(this.m_pioche.getFirst());
             // retirer le premier pokemon de la pioche
-            m_pioche.remove(0);
+            this.m_pioche.removeFirst();
         }
     }
+    public List<Pokemon> getM_pioche(){
+        return this.m_pioche;
+    }
+
 }
